--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- BLOCK LKEVEL ELEMENTS -->
-    <h1>Anything</h1>
+    <h1>Header 1</h1>
     <h2>Anything</h2>
     <h3>Anything</h3>
     <p style="color: blue;">Anything</p>
@@ -93,6 +93,11 @@
     <img class="abs" src="images/Lagos.jpg" alt="" >
     <input class="lastinp" type="text" placeholder="none of your business">
 
-
+    <a class="landing" href="">HOME</a>
+    <a class="landing" id="firstid" href="">HOME</a>
+    <a class="landing firstid" href="">HOME</a>
+    <a class="landing" href="">HOME</a>
+    <a class="landing" id="firstid" href="">HOME</a>
+    <a class="landing firstid" href="">HOME</a>
 </body>
 </html>
